/////////////////////////////////////////////////////////////
// Generated by the VisualData modelbuilder.  DO NOT EDIT!
/////////////////////////////////////////////////////////////
syntax = "proto3";
package OpenNGS.Character.Common;

import "OpenNGS.Core.proto";

//角色状态
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
enum CharacterState{
	CHARACTERSTATE_NONE = 0;
	CHARACTERSTATE_ACCOUNT = 1;
	CHARACTERSTATE_CREATE = 2;
	CHARACTERSTATE_ENTER = 3;
}

//角色信息
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message CharacterInfo{
	uint64 uin = 1;  //角色唯一ID
	string nickname = 2;  //昵称
	uint32 createtime = 3;  //创建时间
	string avatar = 4;  //avatar内容
	uint64 userid = 5;  //所属用户唯一ID
	uint64 openid = 6;  //账号ID
	OpenNGS.Character.Common.LimitInfo limit = 7;  //封禁状态
	string imageurl = 8;  //头像URL
	OpenNGS.Character.Common.AccountIdentity identity = 9;  //账户身份
	OpenNGS.Core.AttributesSingle attributes = 10;  //角色屬性
}
message CharacterInfoArray{
	repeated CharacterInfo items = 1;
}

//角色信息
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message LimitInfo{
	uint32 type = 1;  //封禁类型
	uint32 endtime = 2;  //结束时间
}

//角色信息
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message AccountIdentity{
	int32 type = 1;  //账户类型
	string identity = 2;  //账户标志（例：Occulus ID）
}
