/////////////////////////////////////////////////////////////
// Generated by the VisualData modelbuilder.  DO NOT EDIT!
/////////////////////////////////////////////////////////////
syntax = "proto3";
package OpenNGS.Character.Service;

import "openngs.character.common.proto";

//批量获取角色信息Req
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message GetCharacterInfoListReq{
	repeated uint64 uin = 1;  //角色们的uin
}

//批量获取角色信息Rsp
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message GetCharacterInfoListRsp{
	int32 result = 1;  //错误码
	repeated OpenNGS.Character.Common.CharacterInfo character = 2;  //角色们的信息
}

//改变角色avatar Req
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message ChangeCharacterAvatarReq{
	uint64 uin = 1;  //角色uin
	uint64 guid = 2;  //角色唯一id
	string avatar = 3;  //avatar
}

//改变角色avatar Rsp
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message ChangeCharacterAvatarRsp{
	uint32 result = 1;  //错误码
}

//创建角色Req
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message CreateCharacterReq{
	uint64 guid = 1;  //角色唯一ID
	uint64 userid = 2;  //user id
	string nickname = 3;  //角色昵称
	uint32 language_id = 4;  //语言ID
	uint64 serverid = 5;  //服务器id
	string imageurl = 6;  //头像url
}

//创建角色Rsp
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message CreateCharacterRsp{
	uint32 result = 1;  //错误码
	OpenNGS.Character.Common.CharacterInfo character = 2;  //角色信息
}

//获取玩家所有角色信息Req
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message GetSelfCharacterInfoListReq{
	uint64 userid = 1;  //用户id
}

//获取玩家所有角色信息Rsp
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message GetSelfCharacterInfoListRsp{
	uint32 result = 1;  //错误码
	repeated OpenNGS.Character.Common.CharacterInfo characters = 2;  //角色们的信息
}

//保存角色信息Req
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message SaveCharacterInfoReq{
	OpenNGS.Character.Common.CharacterInfo character = 1;  //角色信息
}

//保存角色信息Rsp
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message SaveCharacterInfoRsp{
	uint32 result = 1;  //错误码
}

//根据平台ID批量获取角色信息Req
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message GetCharacterInfoListByIdentityReq{
	OpenNGS.Character.Common.AccountIdentity identity = 1;  //平台ID
}

//根据平台ID批量获取角色信息Rsp
//Data\Entities\OpenNGS\OpenNGS.Character.xlsx
message GetCharacterInfoListByIdentityRsp{
	uint32 result = 1;  //错误码
	repeated OpenNGS.Character.Common.CharacterInfo characters = 2;  //玩家信息
}

//NiCharacterSerivce服务
service NiCharacterSerivce{
	// 批量获取角色信息
	rpc GetCharacterInfoList (GetCharacterInfoListReq) returns (GetCharacterInfoListRsp) {}
	// 改变角色avatar
	rpc ChangeCharacterAvatar (ChangeCharacterAvatarReq) returns (ChangeCharacterAvatarRsp) {}
	// 创建角色
	rpc CreateCharacter (CreateCharacterReq) returns (CreateCharacterRsp) {}
	// 获取玩家所有角色信息
	rpc GetSelfCharacterInfoList (GetSelfCharacterInfoListReq) returns (GetSelfCharacterInfoListRsp) {}
	// 保存角色信息
	rpc SaveCharacterInfo (SaveCharacterInfoReq) returns (SaveCharacterInfoRsp) {}
	// 根据平台ID批量获取角色信息
	rpc GetCharacterInfoListByIdentity (GetCharacterInfoListByIdentityReq) returns (GetCharacterInfoListByIdentityRsp) {}
}
