/////////////////////////////////////////////////////////////
// Generated by the VisualData modelbuilder.  DO NOT EDIT!
/////////////////////////////////////////////////////////////
syntax = "proto3";
package OpenNGS.Reward.Data;

import "openngs.core.proto";
import "openngs.reward.common.proto";

//
//Data\Entities\OpenNGS\OpenNGS.Reward.xlsx
message Reward{
	uint32 Id = 1;  //奖励ID
	OpenNGS.Core.NGSText Name = 2;  //奖励名称
	OpenNGS.Core.NGSText Desc = 3;  //奖励描述
	uint32 Condition = 4;  //领取奖励的限制性条件
}
message RewardArray{
	repeated Reward items = 1;
}

//
//Data\Entities\OpenNGS\OpenNGS.Reward.xlsx
message RewardContent{
	uint32 Id = 1;  //奖励ID
	OpenNGS.Core.NGSText Decs = 2;  //描述
	uint32 ItemID = 3;  //奖励物品ID
	uint32 ItemCount = 4;  //奖励物品数量
	uint32 Condition = 5;  //进一步的领取规则条件
}
message RewardContentArray{
	repeated RewardContent items = 1;
}

//
//Data\Entities\OpenNGS\OpenNGS.Reward.xlsx
message RewardCondition{
	uint32 Id = 1;  //条件ID
	uint32 ZoneId = 2;  //区Id
	uint32 ServerId = 3;  //服Id
	uint32 SeasonId = 4;  //赛季Id
	uint32 ObtainCountLimit = 5;  //最大领取次数
	uint32 ValidTime = 6;  //有效时间
}
message RewardConditionArray{
	repeated RewardCondition items = 1;
}

//
//Data\Entities\OpenNGS\OpenNGS.Reward.xlsx
message RewardData{
	uint32 Id = 1;  //奖励ID
	uint32 ItemID = 2;  //道具ID
	uint32 ItemCount = 3;  //道具数量
	OpenNGS.Reward.Common.REWARDSTAT_TYPE Status = 4;  //奖励状态
}
message RewardDataArray{
	repeated RewardData items = 1;
}

//
//Data\Entities\OpenNGS\OpenNGS.Reward.xlsx
message RewardSaveData{
	uint32 Id = 1;  //奖励ID
	uint32 ReceiveCount = 2;  //领取次数
}
message RewardSaveDataArray{
	repeated RewardSaveData items = 1;
}

//
//Data\Entities\OpenNGS\OpenNGS.Reward.xlsx
message RewardContainer{
	repeated OpenNGS.Reward.Data.RewardSaveData rewardDict = 1;  //奖励数据字典
}
message RewardContainerArray{
	repeated RewardContainer items = 1;
}
